--- a/realisations.html
+++ b/realisations.html
@@ -681,7 +681,7 @@
                             <div class="modal-project-location">📍 ${realisation.location}</div>
                             <p class="modal-project-description">${realisation.description}</p>
                             <div class="modal-project-features">
-                                <h3>Caractéristiques</h3>
+                                <h3>Caractéristiques du projet</h3>
                                 <div class="features-grid">
                                     ${realisation.features.map(feature => `
                                         <div class="feature-item">
