--- a/realisations.html
+++ b/realisations.html
@@ -58,7 +58,7 @@
         <div class="container">
             <div class="achievements-grid">
                 <div class="achievement-card">
-                    <img src="https://images.pexels.com/photos/1109541/pexels-photo-1109541.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Résidence Les Palmiers">
+                    <img src="public/images/realisation.jpeg" alt="Résidence Les Palmiers">
                     <div class="achievement-overlay">
                         <div class="achievement-info">
                             <h3>Résidence Les Palmiers</h3>
@@ -78,7 +78,7 @@
                 </div>
 
                 <div class="achievement-card">
-                    <img src="https://images.pexels.com/photos/1396132/pexels-photo-1396132.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Tour Élégance">
+                    <img src="public/images/realisation3.jpeg" alt="Tour Élégance">
                     <div class="achievement-overlay">
                         <div class="achievement-info">
                             <h3>Tour Élégance</h3>
@@ -98,7 +98,7 @@
                 </div>
 
                 <div class="achievement-card">
-                    <img src="https://images.pexels.com/photos/1571460/pexels-photo-1571460.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Villa Prestige">
+                    <img src="public/images/realisation4.jpeg" alt="Villa Prestige">
                     <div class="achievement-overlay">
                         <div class="achievement-info">
                             <h3>Villa Prestige</h3>
@@ -118,7 +118,7 @@
                 </div>
 
                 <div class="achievement-card">
-                    <img src="https://images.pexels.com/photos/323780/pexels-photo-323780.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Centre Sea Plaza">
+                    <img src="public/images/realisation5.jpeg" alt="Centre Sea Plaza">
                     <div class="achievement-overlay">
                         <div class="achievement-info">
                             <h3>Centre Sea Plaza</h3>
@@ -138,7 +138,7 @@
                 </div>
 
                 <div class="achievement-card">
-                    <img src="https://images.pexels.com/photos/1486222/pexels-photo-1486222.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Complexe Horizon">
+                    <img src="public/images/realisation6.jpeg" alt="Complexe Horizon">
                     <div class="achievement-overlay">
                         <div class="achievement-info">
                             <h3>Complexe Horizon</h3>
@@ -158,7 +158,7 @@
                 </div>
 
                 <div class="achievement-card">
-                    <img src="https://images.pexels.com/photos/259588/pexels-photo-259588.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Cité Nouvelle">
+                    <img src="public/images/realisation7.jpeg" alt="Cité Nouvelle">
                     <div class="achievement-overlay">
                         <div class="achievement-info">
                             <h3>Cité Nouvelle</h3>
@@ -178,7 +178,7 @@
                 </div>
 
                 <div class="achievement-card">
-                    <img src="https://images.pexels.com/photos/2219024/pexels-photo-2219024.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Hôtel Atlantique">
+                    <img src="public/images/realisation8.jpeg" alt="Hôtel Atlantique">
                     <div class="achievement-overlay">
                         <div class="achievement-info">
                             <h3>Hôtel Atlantique</h3>
@@ -198,7 +198,7 @@
                 </div>
 
                 <div class="achievement-card">
-                    <img src="https://images.pexels.com/photos/1109541/pexels-photo-1109541.jpeg?auto=compress&cs=tinysrgb&w=600" alt="École Moderne">
+                    <img src="public/images/realisation9.jpeg" alt="École Moderne">
                     <div class="achievement-overlay">
                         <div class="achievement-info">
                             <h3>École Moderne</h3>
@@ -218,7 +218,7 @@
                 </div>
 
                 <div class="achievement-card">
-                    <img src="https://images.pexels.com/photos/1396132/pexels-photo-1396132.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Clinique Santé Plus">
+                    <img src="public/images/realisation10.jpeg" alt="Clinique Santé Plus">
                     <div class="achievement-overlay">
                         <div class="achievement-info">
                             <h3>Clinique Santé Plus</h3>
@@ -252,7 +252,7 @@
             <div class="ongoing-grid">
             <div class="ongoing-card">
                 <div class="ongoing-image">
-                    <img src="https://images.pexels.com/photos/1109541/pexels-photo-1109541.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Chantier en cours">
+                    <img src="public/images/WhatsApp Image 2025-07-11 at 21.20.26.jpeg" alt="Chantier en cours">
                 </div>
                 <div class="ongoing-content">
                     <h3>Résidence Grand Standing</h3>
@@ -277,7 +277,7 @@
 
             <div class="ongoing-card">
                 <div class="ongoing-image">
-                    <img src="https://images.pexels.com/photos/1486222/pexels-photo-1486222.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Chantier en cours">
+                    <img src="public/images/realisation.jpeg" alt="Chantier en cours">
                 </div>
                 <div class="ongoing-content">
                     <h3>Centre d'Affaires Moderne</h3>
@@ -302,7 +302,7 @@
 
             <div class="ongoing-card">
                 <div class="ongoing-image">
-                    <img src="https://images.pexels.com/photos/323780/pexels-photo-323780.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Chantier en cours">
+                    <img src="public/images/realisation3.jpeg" alt="Chantier en cours">
                 </div>
                 <div class="ongoing-content">
                     <h3>Marché Central Moderne</h3>
@@ -466,6 +466,12 @@
             'residence-les-palmiers': {
                 title: 'Résidence Les Palmiers',
                 location: 'Dakar',
+                additionalInfo: {
+                    'Date de livraison': '2023',
+                    'Surface': '3,500m²',
+                    'Capacité': '24 logements',
+                    'Statut': 'En cours'
+                },
                 description: 'Complexe résidentiel moderne de 24 logements avec espaces verts',
                 features: [
                     'Architecture moderne et épurée',
@@ -476,13 +482,19 @@
                     'Efficacité énergétique optimisée'
                 ],
                 images: [
-                    'https://images.pexels.com/photos/1109541/pexels-photo-1109541.jpeg?auto=compress&cs=tinysrgb&w=600',
-                    'https://images.pexels.com/photos/323780/pexels-photo-323780.jpeg?auto=compress&cs=tinysrgb&w=600'
+                    'public/images/realisation.jpeg',
+                    'public/images/realisation2.jpeg'
                 ]
             },
             'tour-elegance': {
                 title: 'Tour Élégance',
                 location: 'Dakar',
+                additionalInfo: {
+                    'Date de livraison': '2023',
+                    'Surface': '2,800m²',
+                    'Capacité': '12 étages',
+                    'Statut': 'Terminé'
+                },
                 description: 'Immeuble de bureaux de 12 étages avec façade moderne',
                 features: [
                     'Façade en verre haute performance',
@@ -493,12 +505,18 @@
                     'Certification environnementale'
                 ],
                 images: [
-                    'https://images.pexels.com/photos/1396132/pexels-photo-1396132.jpeg?auto=compress&cs=tinysrgb&w=600'
+                    'public/images/realisation3.jpeg'
                 ]
             },
             'villa-prestige': {
                 title: 'Villa Prestige',
                 location: 'Saly',
+                additionalInfo: {
+                    'Date de livraison': '2022',
+                    'Surface': '450m²',
+                    'Capacité': 'Villa de luxe',
+                    'Statut': 'Terminé'
+                },
                 description: 'Villa de luxe avec piscine et jardin paysager',
                 features: [
                     'Piscine à débordement',
@@ -515,6 +533,12 @@
             'centre-sea-plaza': {
                 title: 'Centre Sea Plaza',
                 location: 'Dakar',
+                additionalInfo: {
+                    'Date de livraison': '2022',
+                    'Surface': '2500m²',
+                    'Capacité': 'Centre commercial',
+                    'Statut': 'Terminé'
+                },
                 description: 'Centre commercial moderne avec parking souterrain',
                 features: [
                     'Design architectural moderne',
@@ -525,12 +549,18 @@
                     'Accessibilité PMR complète'
                 ],
                 images: [
-                    'https://images.pexels.com/photos/323780/pexels-photo-323780.jpeg?auto=compress&cs=tinysrgb&w=600'
+                    'public/images/realisation5.jpeg'
                 ]
             },
             'Complexe Horizon': {
                 title: 'Complexe Horizon',
                 location: 'Dakar',
+                additionalInfo: {
+                    'Date de livraison': '2021',
+                    'Surface': '1,200m²',
+                    'Capacité': 'Bureaux',
+                    'Statut': 'Terminé'
+                },
                 description: 'Complexe de bureaux avec équipements modernes',
                 features: [
                     'Bureaux modulables',
@@ -541,12 +571,18 @@
                     'Accès facile aux transports'
                 ],
                 images: [
-                    'https://images.pexels.com/photos/1486222/pexels-photo-1486222.jpeg?auto=compress&cs=tinysrgb&w=600'
+                    'public/images/realisation6.jpeg'
                 ]
             },
             'Cité Nouvelle': {
                 title: 'Cité Nouvelle',
                 location: 'Thiès',
+                additionalInfo: {
+                    'Date de livraison': '2021',
+                    'Surface': '5,000m²',
+                    'Capacité': '150 logements',
+                    'Statut': 'Terminé'
+                },
                 description: 'Programme de logements sociaux avec équipements',
                 features: [
                     'Logements abordables',
@@ -557,12 +593,18 @@
                     'Sécurité renforcée'
                 ],
                 images: [
-                    'https://images.pexels.com/photos/259588/pexels-photo-259588.jpeg?auto=compress&cs=tinysrgb&w=600'
+                    'public/images/realisation7.jpeg'
                 ]
             },
             'Hotel Atlantique': {
                 title: 'Hôtel Atlantique',
                 location: 'Saint-Louis',
+                additionalInfo: {
+                    'Date de livraison': '2020',
+                    'Surface': '3,000m²',
+                    'Capacité': '80 chambres',
+                    'Statut': 'Terminé'
+                },
                 description: 'Hôtel 4 étoiles avec spa et restaurants',
                 features: [
                     'Spa et centre de bien-être',
@@ -573,12 +615,18 @@
                     'Activités culturelles et sportives'
                 ],
                 images: [
-                    'https://images.pexels.com/photos/2219024/pexels-photo-2219024.jpeg?auto=compress&cs=tinysrgb&w=600'
+                    'public/images/realisation8.jpeg'
                 ]
             },
             'Ecole Moderne': {
                 title: 'École Moderne',
                 location: 'Kaolack',
+                additionalInfo: {
+                    'Date de livraison': '2020',
+                    'Surface': '4,000m²',
+                    'Capacité': '800 élèves',
+                    'Statut': 'Terminé'
+                },
                 description: 'Complexe éducatif avec laboratoires et bibliothèque',
                 features: [
                     'Laboratoires équipés',
@@ -589,12 +637,18 @@
                     'Programme pédagogique innovant'
                 ],
                 images: [
-                    'https://images.pexels.com/photos/1109541/pexels-photo-1109541.jpeg?auto=compress&cs=tinysrgb&w=600'
+                    'public/images/realisation9.jpeg'
                 ]
             },
             'Clinique Santé Plus': {
                 title: 'Clinique Santé Plus',
                 location: 'Ziguinchor',
+                additionalInfo: {
+                    'Date de livraison': '2019',
+                    'Surface': '2,500m²',
+                    'Capacité': '50 lits',
+                    'Statut': 'Terminé'
+                },
                 description: 'Centre médical moderne avec équipements de pointe',
                 features: [
                     'Équipements médicaux avancés',
@@ -605,12 +659,18 @@
                     'Personnel médical qualifié'
                 ],
                 images: [
-                    'https://images.pexels.com/photos/1396132/pexels-photo-1396132.jpeg?auto=compress&cs=tinysrgb&w=600'
+                    'public/images/realisation10.jpeg'
                 ]
             },
             'residence-grand-standing': {
                 title: 'Résidence Grand Standing',
                 location: 'Almadies, Dakar',
+                additionalInfo: {
+                    'Date de livraison': 'Mars 2024',
+                    'Surface': '4,500m²',
+                    'Capacité': '24 logements',
+                    'Statut': 'En cours'
+                },
                 description: 'Construction d\'un complexe résidentiel haut de gamme',
                 features: [
                     'Finitions de luxe',
@@ -627,6 +687,12 @@
             'centre-affaires-moderne': {
                 title: 'Centre d\'Affaires Moderne',
                 location: 'Plateau, Dakar',
+                additionalInfo: {
+                    'Date de livraison': 'Juin 2024',
+                    'Surface': '3,200m²',
+                    'Capacité': 'Bureaux et espaces de coworking',
+                    'Statut': 'En cours'
+                },
                 description: 'Immeuble de bureaux avec espaces de coworking',
                 features: [
                     'Espaces de coworking modernes',
@@ -643,6 +709,12 @@
             'marche-central-moderne': {
                 title: 'Marché Central Moderne',
                 location: 'Thiès',
+                additionalInfo: {
+                    'Date de livraison': 'Février 2024',
+                    'Surface': '2,800m²',
+                    'Capacité': 'Stands commerciaux',
+                    'Statut': 'En cours'
+                },
                 description: 'Rénovation et modernisation du marché central',
                 features: [
                     'Stands modernes',
@@ -676,22 +748,29 @@
                                 <img src="${img}" alt="${realisation.title}" class="modal-project-image">
                             `).join('')}
                         </div>
-                        <div class="modal-project-info">
-                            <h2>${realisation.title}</h2>
-                            <div class="modal-project-location">📍 ${realisation.location}</div>
-                            <p class="modal-project-description">${realisation.description}</p>
-                            <div class="modal-project-features">
-                                <h3>Caractéristiques du projet</h3>
-                                <div class="features-grid">
-                                    ${realisation.features.map(feature => `
-                                        <div class="feature-item">
-                                            <span class="feature-icon">✓</span>
-                                            <span>${feature}</span>
-                                        </div>
-                                    `).join('')}
-                                </div>
+                <div class="modal-project-info">
+                    <h2>${realisation.title}</h2>
+                    <div class="modal-project-location">📍 ${realisation.location}</div>
+                    <div class="modal-project-specs modal-project-additional-info">
+                        ${Object.entries(realisation.additionalInfo || {}).map(([key, value]) => `
+                            <div class="spec-item additional-info-item">
+                                <strong>${key}:</strong> ${value}
                             </div>
+                        `).join('')}
+                    </div>
+                    <p class="modal-project-description">${realisation.description}</p>
+                    <div class="modal-project-features">
+                        <h3>Caractéristiques du projet</h3>
+                        <div class="features-grid">
+                            ${realisation.features.map(feature => `
+                                <div class="feature-item">
+                                    <span class="feature-icon">✓</span>
+                                    <span>${feature}</span>
+                                </div>
+                            `).join('')}
                         </div>
+                    </div>
+                </div>
                     </div>
                     <div class="modal-project-actions">
                         <button class="btn btn-primary" onclick="contactForRealisation('${id}')">
