--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="https://images.pexels.com/photos/259588/pexels-photo-259588.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Résidence moderne">
+                        <img src="public/images/realisation3.jpeg" alt="Résidence moderne">
                     </div>
                     <div class="project-content">
                         <h3>Résidence Moderne</h3>
@@ -227,7 +227,7 @@
                 </div>
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="https://images.pexels.com/photos/323780/pexels-photo-323780.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Centre commercial">
+                        <img src="public/images/realisation6.jpeg" alt="Centre commercial">
                     </div>
                     <div class="project-content">
                         <h3>Centre Commercial</h3>
@@ -241,7 +241,7 @@
                 </div>
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="https://images.pexels.com/photos/1486222/pexels-photo-1486222.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Immeuble de bureaux">
+                        <img src="public/images/realisation8.jpeg" alt="Immeuble de bureaux">
                     </div>
                     <div class="project-content">
                         <h3>Immeuble de Bureaux</h3>
