--- a/a-propos.html
+++ b/a-propos.html
@@ -109,7 +109,7 @@
                     </div>
                 </div>
                 <div class="story-image">
-                    <img src="https://images.pexels.com/photos/1109541/pexels-photo-1109541.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Équipe VERUS BTP" style="width: 100%; height: 400px; object-fit: cover; border-radius: 12px; box-shadow: var(--shadow-large);">
+                    <img src="public/images/realisation5.jpeg" alt="Équipe VERUS BTP" style="width: 100%; height: 400px; object-fit: cover; border-radius: 12px; box-shadow: var(--shadow-large);">
                 </div>
             </div>
         </div>
