Ajout de la section contact

--- a/devis.html
+++ b/devis.html
@@ -413,7 +413,7 @@
                             </div>
                             <div>
                                 <h4 style="margin: 0; color: var(--text-primary);">Email</h4>
-                                <p style="margin: 0; color: var(--text-secondary);">contact@verusbtp.sn</p>
+                                <p style="margin: 0; color: var(--text-secondary);">verusbtp@gmail.com</p>
                             </div>
                         </div>
                         
@@ -615,7 +615,7 @@
                     <div class="contact-info">
                         <p>📍 Keur Massar, Dakar, Sénégal</p>
                         <p>📞 +221 77 454 80 06</p>
-                        <p>✉️ contact@verusbtp.sn</p>
+                        <p>✉️ verusbtp@gmail.com</p>
                     </div>
                 </div>
                 <div class="footer-section">
@@ -641,6 +641,7 @@
                     <ul>
                         <li><a href="devis.html">Demander un Devis</a></li>
                         <li><a href="mailto:contact@verusbtp.sn">Nous Contacter</a></li>
+                        <li><a href="mailto:verusbtp@gmail.com">verusbtp@gmail.com</a></li>
                         <li><a href="tel:+221">Urgences</a></li>
                     </ul>
                 </div>
