--- a/projets.html
+++ b/projets.html
@@ -516,9 +516,11 @@
                     <h3>VERUS BTP</h3>
                     <p>Votre partenaire de confiance pour tous vos projets de construction au Sénégal.</p>
                     <div class="contact-info">
+                        <p>🏠 761 HLM Grand Medine</p>
                         <p>📍 Dakar, Sénégal</p>
                         <p>📞 +221 33 XXX XX XX</p>
                         <p>✉️ contact@verusbtp.sn</p>
+                        <p>✉️ verusbtp@gmail.com</p>
                     </div>
                 </div>
                 <div class="footer-section">
@@ -544,6 +546,7 @@
                     <ul>
                         <li><a href="devis.html">Demander un Devis</a></li>
                         <li><a href="mailto:contact@verusbtp.sn">Nous Contacter</a></li>
+                        <li><a href="mailto:verusbtp@gmail.com">verusbtp@gmail.com</a></li>
                         <li><a href="tel:+221">Urgences</a></li>
                     </ul>
                 </div>
