--- a/services.html
+++ b/services.html
@@ -39,7 +39,7 @@
     </nav>
 
     <!-- Page Header -->
-    <section class="page-header">
+    <section class="page-header" style="background: linear-gradient(rgba(37, 99, 235, 0.9), rgba(249, 115, 22, 0.9)), url('https://images.pexels.com/photos/3862132/pexels-photo-3862132.jpeg?auto=compress&cs=tinysrgb&w=1200') center/cover;">
         <div class="container">
             <div class="page-header-content">
                 <h1>Nos Services</h1>
