Corriger l'image de fond de la section hero de l'accueil

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <!-- Hero Section -->
     <section class="hero">
-        <div class="hero-background">
+        <div class="hero-background" style="background: linear-gradient(rgba(37, 99, 235, 0.9), rgba(249, 115, 22, 0.9)), url('https://images.pexels.com/photos/1109541/pexels-photo-1109541.jpeg?auto=compress&cs=tinysrgb&w=1200') center/cover;">
             <div class="hero-overlay"></div>
         </div>
         <div class="container">
