--- a/index.html
+++ b/index.html
@@ -31,6 +31,19 @@
                 <li><a href="equipe.html" class="nav-link">Équipe</a></li>
                 <li><a href="partenaires.html" class="nav-link">Partenaires</a></li>
                 <li><a href="devis.html" class="btn btn-primary">Demander un Devis</a></li>
+                <li>
+                    <button class="theme-toggle" id="themeToggle" aria-label="Basculer le thème">
+                        <div class="theme-toggle-slider">
+                            <svg class="sun-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <circle cx="12" cy="12" r="5"/>
+                                <path d="M12 1v2M12 21v2M4.22 4.22l1.42 1.42M18.36 18.36l1.42 1.42M1 12h2M21 12h2M4.22 19.78l1.42-1.42M18.36 5.64l1.42-1.42"/>
+                            </svg>
+                            <svg class="moon-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" style="display: none;">
+                                <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"/>
+                            </svg>
+                        </div>
+                    </button>
+                </li>
             </ul>
             <div class="hamburger">
                 <span></span>
